--- a/package.json
+++ b/package.json
@@ -1,13 +1,36 @@
 {
   "name": "be-heybook",
-  "type": "module",
-  "version": "1.0.0",
-  "description": "Backend API for an online store selling books and stationery",
-  "main": "src/server.js",
-  "author": "duocanh",
-  "license": "MIT",
   "private": true,
+  "version": "1.0.0",
+  "author": "duocanh",
+  "description": "Backend API for an online store selling books and stationery",
+  "engines": {
+    "node": ">=18.x"
+  },
+  "scripts": {
+    "lint": "eslint src --ext js --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --write .",
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel ./src -d ./build/src",
+    "build": "npm run clean && npm run build-babel",
+    "production": "npm run build && node ./build/src/server.js",
+    "dev": "nodemon --exec babel-node ./src/server.js"
+  },
   "dependencies": {
+    "@babel/runtime": "^7.26.10",
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.10",
+    "@babel/node": "^7.26.0",
+    "@babel/plugin-transform-runtime": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.1.1",
+    "globals": "^15.15.0",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.5.3"
   }
 }
