--- a/package.json
+++ b/package.json
@@ -17,8 +17,20 @@
     "dev": "nodemon --exec babel-node ./src/server.js"
   },
   "dependencies": {
-    "@babel/runtime": "^7.26.10",
-    "express": "^5.1.0"
+    "@babel/runtime": "^7.27.0",
+    "async-exit-hook": "^2.0.1",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.14.0",
+    "sequelize": "^6.37.7",
+    "sequelize-auto": "^0.8.8",
+    "sequelize-cli": "^6.6.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
