--- a/package.json
+++ b/package.json
@@ -20,16 +20,20 @@
     "@babel/runtime": "^7.27.0",
     "async-exit-hook": "^2.0.1",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "sequelize": "^6.37.7",
     "sequelize-auto": "^0.8.8",
     "sequelize-cli": "^6.6.2",
+    "streamifier": "^0.1.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
