--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,30 @@
+# Database Configuration
+DATABASE_NAME=your_database_name
+DATABASE_PASSWORD=your_database_password
+DATABASE_PORT=3306
 
+# App Configuration
+APP_HOST=localhost
+APP_PORT=8017
+AUTHOR=your_name
+
+# Build Mode
+BUILD_MODE=development
+
+# Website Domains
+WEBSITE_DOMAIN_DEVELOPMENT=http://localhost:3000
+WEBSITE_DOMAIN_PRODUCTION=https://your-domain.com
+
+# JWT Configuration
+ACCESS_TOKEN_SECRET_SIGNATURE=your_access_token_secret
+ACCESS_TOKEN_LIFE=15m
+REFRESH_TOKEN_SECRET_SIGNATURE=your_refresh_token_secret
+REFRESH_TOKEN_LIFE=14d
+
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
+
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=your_google_client_id.apps.googleusercontent.com
