--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DATABASE_NAME='DBHeyBook'
-DATABASE_PASSWORD=''
-DATABASE_PORT=3306
+DATABASE_PASSWORD=123456
+DATABASE_PORT=3307
 
 APP_HOST='localhost'
 APP_PORT=3000
@@ -18,6 +18,12 @@ REFRESH_TOKEN_LIFE='14 days'
 CLOUDINARY_CLOUD_NAME='dytdkfnvr'
 CLOUDINARY_API_KEY='962289231415877'
 CLOUDINARY_API_SECRET='EdpgHpX4hTcv30YqpQMH4HZvTPo'
+
+# vnpay
+VNPAY_TMN_CODE=A14ZG7RU
+VNPAY_HASH_SECRET=GWZVNUYKOESWJXIFUXGSWNQQLSJCPQGT
+VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNPAY_RETURN_URL=http://localhost:5173/vnpay-return
 
 GOOGLE_CLIENT_ID=227252893218-b87ba3mnobvpda8sdc3tsi3klsaevfdr.apps.googleusercontent.com
 
