--- a/.env.example
+++ b/.env.example
@@ -26,5 +26,11 @@ CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
 CLOUDINARY_API_KEY=your_cloudinary_api_key
 CLOUDINARY_API_SECRET=your_cloudinary_api_secret
 
+# vnpay
+VNPAY_TMN_CODE=A14ZG7RU
+VNPAY_HASH_SECRET=GWZVNUYKOESWJXIFUXGSWNQQLSJCPQGT
+VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNPAY_RETURN_URL=http://localhost:5173/vnpay-return
+
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=your_google_client_id.apps.googleusercontent.com
