soketIo và Dashboard

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sequelize": "^6.37.7",
     "sequelize-auto": "^0.8.8",
     "sequelize-cli": "^6.6.2",
+    "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
     "uuid": "^11.1.0"
   },
