--- a/.env
+++ b/.env
@@ -1,30 +1,39 @@
-DATABASE_NAME='DBHeyBook'
-DATABASE_PASSWORD=123456
-DATABASE_PORT=3307
+# ================== LOCAL CONFIG ==================
+LOCAL_DATABASE_HOST=localhost
+LOCAL_DATABASE_NAME=DBHeyBook
+LOCAL_DATABASE_USER=root
+LOCAL_DATABASE_PASSWORD=123456
+LOCAL_DATABASE_PORT=3306   # Xem MySQL bạn đang chạy port nào (3306 hoặc 3307)
 
-APP_HOST='localhost'
+# ================== CPANEL / PRODUCTION CONFIG ==================
+PROD_DATABASE_HOST=localhost
+PROD_DATABASE_NAME=nhrobzuz_robot
+PROD_DATABASE_USER=nhrobzuz_robot
+PROD_DATABASE_PASSWORD=Duc@nh123
+PROD_DATABASE_PORT=3306
+
+# ================== APP CONFIG ==================
+APP_HOST=0.0.0.0
 APP_PORT=3000
-BUILD_MODE='dev'
+BUILD_MODE=local   # 👉 đổi thành production khi deploy lên Cpanel
 
-AUTHOR='DuocAnh'
-WEBSITE_DOMAIN_DEVELOPMENT='http://localhost:5173'
-WEBSITE_DOMAIN_PRODUCTION='https://duocanh.com'
+AUTHOR=DuocAnh
+WEBSITE_DOMAIN_DEVELOPMENT=http://localhost:5173
+WEBSITE_DOMAIN_PRODUCTION=https://duocanh.com
 
-ACCESS_TOKEN_SECRET_SIGNATURE='heybook1-web-AD-duocanh-Aa@21#'
-ACCESS_TOKEN_LIFE='30m'
-REFRESH_TOKEN_SECRET_SIGNATURE='heybook2-web-AD-duocanh-Aa@21#'
-REFRESH_TOKEN_LIFE='14 days'
+ACCESS_TOKEN_SECRET_SIGNATURE=heybook1-web-AD-duocanh-Aa@21#
+ACCESS_TOKEN_LIFE=30m
+REFRESH_TOKEN_SECRET_SIGNATURE=heybook2-web-AD-duocanh-Aa@21#
+REFRESH_TOKEN_LIFE=14 days
 
-CLOUDINARY_CLOUD_NAME='dytdkfnvr'
-CLOUDINARY_API_KEY='962289231415877'
-CLOUDINARY_API_SECRET='EdpgHpX4hTcv30YqpQMH4HZvTPo'
+CLOUDINARY_CLOUD_NAME=dytdkfnvr
+CLOUDINARY_API_KEY=962289231415877
+CLOUDINARY_API_SECRET=EdpgHpX4hTcv30YqpQMH4HZvTPo
 
-# vnpay
+# VNPay
 VNPAY_TMN_CODE=A14ZG7RU
 VNPAY_HASH_SECRET=GWZVNUYKOESWJXIFUXGSWNQQLSJCPQGT
 VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 VNPAY_RETURN_URL=http://localhost:5173/vnpay-return
 
 GOOGLE_CLIENT_ID=227252893218-b87ba3mnobvpda8sdc3tsi3klsaevfdr.apps.googleusercontent.com
-
-# "gen-models": "sequelize-auto -h localhost -d dbheybook -u root -x 123456 -p 3307 --dialect mysql -o ./models -l es6"
