--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ PROD_DATABASE_PORT=3306
 # ================== APP CONFIG ==================
 APP_HOST=0.0.0.0
 APP_PORT=3000
-BUILD_MODE=local   # 👉 đổi thành production khi deploy lên Cpanel
+BUILD_MODE=production   # 👉 đổi thành production khi deploy lên Cpanel
 
 AUTHOR=DuocAnh
 WEBSITE_DOMAIN_DEVELOPMENT=http://localhost:5173
