update pro host

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ LOCAL_DATABASE_PASSWORD=123456
 LOCAL_DATABASE_PORT=3306   # Xem MySQL bạn đang chạy port nào (3306 hoặc 3307)
 
 # ================== CPANEL / PRODUCTION CONFIG ==================
-PROD_DATABASE_HOST=localhost
+PROD_DATABASE_HOST=127.0.0.1
 PROD_DATABASE_NAME=nhrobzuz_robot
 PROD_DATABASE_USER=nhrobzuz_robot
 PROD_DATABASE_PASSWORD=Duc@nh123
