--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ LOCAL_DATABASE_HOST=localhost
 LOCAL_DATABASE_NAME=DBHeyBook
 LOCAL_DATABASE_USER=root
 LOCAL_DATABASE_PASSWORD=123456
-LOCAL_DATABASE_PORT=3306   # Xem MySQL bạn đang chạy port nào (3306 hoặc 3307)
+LOCAL_DATABASE_PORT=3306   
 
 # ================== CPANEL / PRODUCTION CONFIG ==================
 PROD_DATABASE_HOST=127.0.0.1
@@ -15,8 +15,7 @@ PROD_DATABASE_PORT=3306
 # ================== APP CONFIG ==================
 APP_HOST=0.0.0.0
 APP_PORT=3000
-BUILD_MODE=production   # 👉 đổi thành production khi deploy lên Cpanel
-
+BUILD_MODE=production
 AUTHOR=DuocAnh
 WEBSITE_DOMAIN_DEVELOPMENT=http://localhost:5173
 WEBSITE_DOMAIN_PRODUCTION=https://duocanh.com
