update de build

--- a/.env
+++ b/.env
@@ -1,9 +1,16 @@
+
 # ================== LOCAL CONFIG ==================
 LOCAL_DATABASE_HOST=localhost
-LOCAL_DATABASE_NAME=DBHeyBook
-LOCAL_DATABASE_USER=root
-LOCAL_DATABASE_PASSWORD=123456
-LOCAL_DATABASE_PORT=3306   
+LOCAL_DATABASE_NAME=nhrobzuz_robot
+LOCAL_DATABASE_USER=nhrobzuz_robot
+LOCAL_DATABASE_PASSWORD=Duc@nh123
+LOCAL_DATABASE_PORT=3306  
+# ================== LOCAL CONFIG ==================
+LOCAL_DATABASE_HOST1=localhost
+LOCAL_DATABASE_NAME1=DBHeyBook
+LOCAL_DATABASE_USER1=root
+LOCAL_DATABASE_PASSWORD1=123456
+LOCAL_DATABASE_PORT1=3306   
 
 # ================== CPANEL / PRODUCTION CONFIG ==================
 PROD_DATABASE_HOST=127.0.0.1
@@ -14,8 +21,8 @@ PROD_DATABASE_PORT=3306
 
 # ================== APP CONFIG ==================
 APP_HOST=0.0.0.0
-APP_PORT=3000
-BUILD_MODE=production
+APP_PORT=3002
+BUILD_MODE=local
 AUTHOR=DuocAnh
 WEBSITE_DOMAIN_DEVELOPMENT=http://localhost:5173
 WEBSITE_DOMAIN_PRODUCTION=https://duocanh.com
